Fix for Overflow Behavior implementation (#277)
* Update readmes

* WA to adjust the canvas height in nested canvases

issue: 97976

* Reordered properties in gx-table control

* Fix for Overflow Behavior implementation

 - The Overflow Behavior implementation will no longer be in each gx-table-cell. Instead (as designed in the documentation) the implementation will be in the gx-table.

 - Rename "containerCell" mixin to "align-inner-control-in-cell".

 - Change "visibility(flex)" mixin to "display: flex" property in the "align-inner-control-in-cell" mixin, since the cells (gx-table-cell and gx-canvas-cell) do not have invisible-mode attribute.

 - Remove "overflowMode" mixin.

 - Added preliminary support for overflow-style gx-property in the gx-table control.

issue: 98521

--- a/src/components/canvas-cell/canvas-cell.scss
+++ b/src/components/canvas-cell/canvas-cell.scss
@@ -2,14 +2,10 @@
 @import "../common/_base.scss";
 
 gx-canvas-cell {
+  @include align-inner-control-in-cell();
   @include text-align-with-shadow-DOM();
   @include valign-with-shadow-DOM();
 
-  // The include "overflowMode()" from the mixin
-  //   @mixin containerCell()
-  // does not apply in this case, because the gx-canvas control always has
-  // auto-grow = True
-  @include containerCell(false);
   position: absolute;
   flex-direction: row; // Do not change flex-direction. All alignments will break
   overflow: hidden;
