--- a/src/components/common/_base.scss
+++ b/src/components/common/_base.scss
@@ -29,21 +29,8 @@
   }
 }
 
-@mixin overflowMode() {
-  &[overflow-mode="clip"] {
-    overflow: hidden;
-  }
-  &[overflow-mode="scroll"] {
-    overflow: auto;
-  }
-}
-
-@mixin containerCell($has-overflow-mode: true) {
-  @include visibility(flex);
-
-  @if $has-overflow-mode {
-    @include overflowMode();
-  }
+@mixin align-inner-control-in-cell() {
+  display: flex;
 
   &[align="left"] {
     justify-content: flex-start;
